Fri May 17 14:45:28 BST 2002  Olly Betts <ollybe@ananova.net>

	* .cvsignore: Updated.

	* simplesearch and simpleexpand moved out of simple and into autotools
	  build system.

Mon May 13 13:36:26 BST 2002  Olly Betts <olly@survex.com>

	* Started to clean up simple examples and move them into the main
	  build system.

	* Link with GNU getopt where required.

Fri May 10 14:52:34 BST 2002  Olly Betts <olly@survex.com>

	* indexnasty: add_key -> add_value.

Fri May 03 16:23:47 BST 2002  Olly Betts <olly@survex.com>

	* Updated wrt key->value change in xapian-core.

Thu May 02 16:02:19 BST 2002  Olly Betts <olly@survex.com>

	* Updated to reflect removal of OmData.

Tue Apr 23 15:16:07 BST 2002  Olly Betts <olly@survex.com>

	* .cvsignore: updated.

Tue Apr 23 15:15:06 BST 2002  Olly Betts <olly@survex.com>

        * Make buildall smart enough to generate aclocal.m4 properly and
          remove acinclude.m4.  It now also extracts the package name from
          configure.in so we can use the same buildall everywhere.

Tue Apr 23 14:23:54 BST 2002  Olly Betts <olly@survex.com>

	* Updated for xapian-config and xapian.m4 changes.

Thu Apr 18 14:27:48 BST 2002  Olly Betts <olly@survex.com>

	* Updated buildall in line with buildall in xapian-core.

Wed Apr 17 12:29:49 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config: Removed --uninst support - it's very hard to make it
	  work reliably and we're better off directing our efforts towards
	  improving the library than trying to get it working and keep it
	  working.

Mon Apr 15 12:10:29 BST 2002  Olly Betts <olly@survex.com>

	* getopt usage fixes.

Mon Apr 15 11:34:40 BST 2002  Olly Betts <olly@survex.com>

	* Fixed getopt_long usage.

Fri Apr 12 16:24:48 BST 2002  Olly Betts <olly@survex.com>

	* Require automake 1.5.

Fri Apr 12 12:25:21 BST 2002  Olly Betts <olly@survex.com>

	* msearch: Use getopt.

Fri Apr 12 11:50:33 BST 2002  Olly Betts <olly@survex.com>

	* Tidied up examples build system.
